ecmascript/parser/tests/test262-error-references/fail/4e2cce832b4449f1.js.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/test262-parser/fail/4e2cce832b4449f1.js:1:9
  |
1 | for(let x=1 of [1,2,3]) 0
  |         ^

